k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    annotations:
        kargo.9rum.cc/phase: dev
    labels:
        app: frontend
        app.kubernetes.io/managed-by: kargocd
    name: frontend
    namespace: default
spec:
    replicas: 1
    selector:
        matchLabels:
            app: frontend
    strategy:
        rollingUpdate:
            maxSurge: 25%
            maxUnavailable: 1
        type: RollingUpdate
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
                - name: frontend
                  image: krmp-d2hub-idock.9rum.cc/dev-test/repo_66a6b8af26ea 
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 80
                  volumeMounts:
                      - name: config-volume
                        mountPath: /usr/src/app/.env
                        subPath: .env
            volumes:
                - name: config-volume
                  configMap:
                      name: url-config
---
apiVersion: v1
kind: Service
metadata:
    annotations:
        kargo.9rum.cc/phase: dev
    labels:
        app.kubernetes.io/managed-by: kargocd 
    name: frontend-service
    namespace: default
spec:
    ports:
        - name: http
          port: 80
          targetPort: 80
    selector:
        app: frontend
    type: LoadBalancer
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    annotations:
        kargo.9rum.cc/phase: dev
        nginx.ingress.kubernetes.io/rewrite-target: /$2
        nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    labels:
        app.kubernetes.io/managed-by: kargocd
    name: frontend
    namespace: default
spec:
    rules:
        - http:
              paths:
                  - backend:
                        serviceName: frontend-service
                        servicePort: 80
                    path: /kc0de58e30a59a(/|$)(.*)
